# deployed-projects

./: README.md
deployed-django-projects/Ecommerce/: README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
deployed-django-projects/Ecommerce/core/: settings.py  urls.py
deployed-django-projects/Ecommerce/order/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
deployed-django-projects/Ecommerce/order/migrations/: 0001_initial.py  0002_cart_cartitem_order_orderitem.py
deployed-django-projects/Ecommerce/order/templatetags/: custom_filters.py
deployed-django-projects/Ecommerce/static/css/: styles.css
deployed-django-projects/Ecommerce/templates/: base.html  home.html  navbar.html
deployed-django-projects/Ecommerce/templates/cart/: update_cart_item.html  view_cart.html
deployed-django-projects/Ecommerce/templates/dashboard/: boss_dashboard.html  consumer_dashboard.html
deployed-django-projects/Ecommerce/templates/orders/: manage_orders.html  order_detail.html  order_detail_boss.html  order_list.html  order_list_boss.html  place_order.html  sales_report.html
deployed-django-projects/Ecommerce/users/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
deployed-django-projects/Portfolio/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
deployed-django-projects/Portfolio/contact/: admin.py  apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
deployed-django-projects/Portfolio/core/: settings.py  urls.py
deployed-django-projects/Portfolio/demo/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
deployed-django-projects/Portfolio/static/: styles.css
deployed-django-projects/Portfolio/templates/: base.html  contact.html  contact_limit.html  contact_success.html  project_detail.html  project_list.html  resume_detail.html
(+67 files in other folders)
